# caitlyn

./: CMakeLists.txt  Makefile  build.sh
foo/inc/: foo.hpp
foo/src/: foo.cpp
foo/test/: test_foo.cpp
